<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        />

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/imgTitle"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/taskTitle"
        android:text="@string/title"
        android:height="20sp" />

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below= "@+id/taskTitle"
        android:layout_toRightOf="@id/imgTitle"
        android:id="@+id/description"
        android:text="@string/description"
        android:height="20sp" />


    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below= "@+id/description"
        android:layout_toRightOf="@id/imgTitle"
        android:id="@+id/status"
        android:text="@string/status"
        android:height="20sp" />

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below= "@+id/status"
        android:layout_toRightOf="@id/imgTitle"
        android:id="@+id/category"
        android:text="@string/category"
        android:height="20sp" />


    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below= "@+id/category"
        android:layout_toRightOf="@id/imgTitle"
        android:id="@+id/priority"
        android:text="@string/priority"
        android:height="20sp" />

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below= "@+id/priority"
        android:layout_toRightOf="@id/imgTitle"
        android:id="@+id/address"
        android:text="@string/address"
        android:height="20sp" />


</RelativeLayout>