<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.comp3617.assignment2.anamicakartik.ActionActivity">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:id="@+id/imgCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCategory"
        android:id="@+id/editTitle"
        android:hint="@string/title"
        android:layout_weight="1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTitle"
        android:id="@+id/editDesc"
        android:hint="@string/description"
        android:layout_weight="1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDesc"
        android:id="@+id/editAddress"
        android:hint="@string/address"
        android:layout_weight="1"
        />


    <Spinner
        android:id="@+id/editStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editAddress"
        android:layout_weight="1"
        />

    <Spinner
        android:id="@+id/editCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editStatus"
        android:layout_weight="1"
        />

    <Spinner
        android:id="@+id/editPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editCategory"
        android:layout_weight="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnAddTask"
        android:background="@drawable/button_green"
        android:text="@string/action_add"
        android:layout_weight="1"
        />


</LinearLayout>
